Opened 5 years ago
Closed 5 years ago
#12574 closed bug (fixed)
BSpinner Has Wrong Colors
Reported by: | looncraz | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Visible in Deskbar Preferences, per part of the discussion in #12572.
Attachments (1)
Change History (4)
by , 5 years ago
Attachment: | BAbstractSpinner-Colors.patch added |
---|
comment:1 by , 5 years ago
patch: | 0 → 1 |
---|
comment:2 by , 5 years ago
Component: | - General → Kits/Interface Kit |
---|---|
Description: | modified (diff) |
Milestone: | Unscheduled → R1 |
Owner: | changed from | to
comment:3 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Applied in hrev50010.